# pyutils

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
src/pyutils/: __init__.py  auth.py  binance.py  cli.py  codecogs.py  codemetrics.py  codemetrics_template.html  data_structs.py  exceptions.py  git.py  graphviz.py  hdf.py  markdown.py  path.py  pytest.py  pyvista.py  regex_lib.py  subl.py  url.py  utils.py  viz_tree.py  zotero.py
src/pyutils/_cli/open_subl/: __init__.py
src/pyutils/callgraph/: pyan.py
src/pyutils/clipboard/: __init__.py  pyperclip.py  xclip.py
src/pyutils/text/: regex.py
tests/: conftest.py  test_markdown.py  test_regex_lib.py
tests/clipboard/: test_xclip.py
tests/text/: test_regex.py  test_regex_lib.py
