[metadata]
name = pyutils
version = attr: pyutils.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Utils to solve small tasks
long_description = file: README.md
url = https://github.com/pyutils
project_urls =
	Bug Tracker = https://github.com/pyutils/issues
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    make-callgraph = pyutils.cli:make_callgraph