[metadata]
name = pyutils
version = attr: pyutils.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Utils to solve small tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/pyutils
project_urls =
	Bug Tracker = https://github.com/lpereira95/pyutils/issues
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6
install_requires =
    click

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest
all =
    pyperclip
    altair
    gitpython
    h5py
    anytree
    tldextract
    codemetrics
codecogs =
    pyperclip
git = 
    gitpython
hdf =
    h5py
    anytree
integratedtests =
    pytest
    gitpython


[options.entry_points]
console_scripts =
    open-subl = pyutils._cli.open_subl:app
    make-callgraph = pyutils.cli:make_callgraph
    show-hdf-tree = pyutils.cli:show_hdf_tree
    codecog-eq = pyutils.cli:codecog_eq
    my-dot = pyutils.cli:my_dot
    my-dot-all = pyutils.cli:my_dot_all
    print-repos-active-branch = pyutils.cli:print_repos_active_branch
    print-repo-branches = pyutils.cli:print_repo_branches
    print-repos-branches = pyutils.cli:print_repos_branches
    print-repos-dirty = pyutils.cli:print_repos_dirty
    checkout-repo = pyutils.cli:checkout_repo
    checkout-repos = pyutils.cli:checkout_repos
    pull-repo = pyutils.cli:pull_repo
    pull-repos = pyutils.cli:pull_repos
    print-repos-no-upstream = pyutils.cli:print_repos_no_upstream
    make-integrated-tests = pyutils.cli:make_integrated_tests
    rename-hdf = pyutils.cli:rename_hdf_cli

